<resources>
    <string name="perm_rationale_READ_PHONE_STATE">READ_PHONE_STATE: This permission is required to detect when the phone was turned on and off.</string>
    <string name="perm_rationale_RECEIVE_BOOT_COMPLETED">RECEIVE_BOOT_COMPLETED: This permission is required to collect \"on boot\" stats.</string>
    <string name="perm_rationale_INTERNET">INTERNET: This permission is required for analytics purposes.</string>
    <string name="perm_rationale_ACCESS_NETWORK_STATE">ACCESS_NETWORK_STATE: This permission is required to connect network stats.</string>
    <string name="perm_rationale_ACCESS_WIFI_STATE">ACCESS_WIFI_STATE: This permission is required to access Wifi stats.</string>
    <string name="perm_rationale_PACKAGE_USAGE_STATS">PACKAGE_USAGE_STATS: This permission is required to access package stats.</string>
    <string name="perm_rationale_APPOPS_USAGE_STATS">APPOPS_USAGE_STATS: This permission is required to access alarm stats.Please grant it in the following dialog.</string>
    <string name="perm_rationale_READ_EXTERNAL_STORAGE">READ_EXTERNAL_STORAGE: This permission is required to access files, i.e. read the battery stats .</string>
    <string name="perm_rationale_WRITE_EXTERNAL_STORAGE">WRITE_EXTERNAL_STORAGE: This permission is required to access the battery stats .</string>
    <string name="event_processing_channel_name" translatable="false">BBS Event Processing</string>
    <string name="event_processing_channel_description" translatable="false">BBS Notification for Backgroud Service</string>
    <string name="plugin_name">Better Battery Stats</string>
    <string name="foreground_service_text">Event processing</string>
    <string name="message_hint">Scheduled Toast</string>
    <string name="message_hint_saveref">Save a Custom Reference</string>
    <string name="message_hint_savestat">Save a Text Dumpfile</string>
    <string name="message_hint_savestatjson">Save a JSON Dumpfile</string>
    <string name="message_hint_sinceref">Dump Since last Reference</string>
    <string name="message_hint_stat_type">Stat Type</string>
    <string name="message_enable_root">Enabling root features assumes that your phone is rooted.\nPlease make sure to grant su rights to Alarms and Network stats.\nIf those rights do not stick blame the su app, not BBS.\nContinue?</string>
    <string name="message_enable_active_mon">Active monitoring results in an overhead in terms of wakeups and processing and should be used with care.\nContinue?</string>
    <string name="message_first_start">First launch. Creating \'unplugged\'</string>
    <string name="message_copied_to_clipboard">%s was copied to the clipboard</string>
    <string name="message_no_hist_froyo">Unfortunately Froyo does not support history data</string>
    <string name="message_no_appops">AppOps does not exist on your ROM</string>
    <string name="message_external_storage_write_error">External Storage can not be written</string>
    <string name="message_error_writing_dumpfile">An error occurred while dumping the history</string>
    <string name="message_identical_references">An error occurred. Both stats are identical (%1$1, %2$s)</string>
    <string name="message_watchdog_processing">BBS: Watchdog processing...</string>
    <string name="message_watchdog_awake_alert">BBS: Awake alert: %1$d%% awake</string>
    <string name="message_computing">Computing...</string>
    <string name="message_awake_alert">Awake alert</string>
    <string name="message_awake_info">%1$d%% awake while screen off</string>
    <string name="message_no_fileman_error">Please install OI FileManager</string>
    <string name="app_name">BetterBatteryStats</string>
    <string name="app_welcome">Welcome to %s</string>
    <string name="app_pname">com.asksven.betterbatterystats</string>
    <string name="label_button_remind">Remind me later</string>
    <string name="label_button_rate">Rate</string>
    <string name="label_button_no_thanks">No, thanks</string>
    <string name="text_dialog_rate">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="label_stat_type">Stat type</string>
    <string name="label_since">Since</string>
    <string name="label_fallback_stat_type">Fallback stat type</string>
    <string name="label_title">Title</string>
    <string name="label_author">Author</string>
    <string name="label_license">License</string>
    <string name="label_import_export_prefs">Import/Export Preferences from/to %s</string>
    <string name="label_import_prefs">Import</string>
    <string name="label_export_prefs">Export</string>
    <string name="label_hist_time">Time</string>
    <string name="label_hist_battery">Bat</string>
    <string name="label_hist_power">Chrg</string>
    <string name="label_preferences">Settings</string>
    <string name="label_graphs">Graphs</string>
    <string name="label_raw_stats">Raw Stats</string>
    <string name="label_about">About</string>
    <string name="label_help">Help</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_share">Share</string>
    <string name="label_custom_ref">Set Custom Ref.</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Switch themes</string>
    <string name="pref_section_display">Display</string>
    <string name="pref_filter_data_title">Filter stats</string>
    <string name="pref_filter_data_summary">Enable the filtering of data to non-zero values</string>
    <string name="pref_show_bat_details_title">Battery Details</string>
    <string name="pref_show_bat_details_summary">Show battery from/to pct. on screen</string>
    <string name="pref_show_gauge_title">Show Bars</string>
    <string name="pref_show_gauge_summary">Show bars instead of pie gauge</string>
    <string name="pref_graph_bar_height_title">Height for graph bars</string>
    <string name="pref_graph_bar_height_summary">If you are using non-default densities you can change the bar height here</string>
    <string name="pref_section_customize_views">Customize Views</string>
    <string name="pref_show_from_to_ref_title">From/To References</string>
    <string name="pref_show_from_to_ref_summary">Show the spinners for selecting the references</string>
    <string name="pref_show_other_wifi_title">Show Wifi</string>
    <string name="pref_show_other_wifi_summary">Show Wifi values</string>
    <string name="pref_show_other_signal_title">Show signal</string>
    <string name="pref_show_other_signal_summary">Show signal values</string>
    <string name="pref_show_other_screen_brightness_title">Show screen</string>
    <string name="pref_show_other_screen_brightness_summary">Show screen brightness</string>
    <string name="pref_show_other_connection_title">Show connection</string>
    <string name="pref_show_other_connection_summary">Show connection values</string>
    <string name="pref_show_other_bt_title">Show Bluetooth</string>
    <string name="pref_show_other_bt_summary">Show Bluetooth values</string>
    <string name="pref_show_other_doze_title">Show Doze Mode</string>
    <string name="pref_show_other_doze_summary">Show Doze Mode values</string>
    <string name="pref_section_defaults">Defaults</string>
    <string name="pref_default_stat_title">Default stat</string>
    <string name="pref_default_stat_summary">Set the stat to be shown when starting the app</string>
    <string name="pref_default_stat_type_title">Default stat type</string>
    <string name="pref_default_stat_type_summary">Set the stat type to be shown when starting the app</string>
    <string name="pref_section_watchdog">Watchdog</string>
    <string name="pref_enable_watchdog_title">Enable</string>
    <string name="pref_enable_watchdog_summary">Enables watchdog processing</string>
    <string name="pref_watchdog_on_unlock_title">Reference on unlock</string>
    <string name="pref_watchdog_on_unlock_summary">Reference is saved on \'unlock\' (else on \'screen on\')</string>
    <string name="pref_charged_trigger_percentage_title">Minimum percentage that counts as charged</string>
    <string name="pref_charged_trigger_percentage_summary">If battery is over this percentage when charging cable is unplugged, then Since Charged reference is stored</string>
    <string name="pref_section_warnings">Warnings</string>
    <string name="pref_watchdog_awake_threshold_title">Awake threshold</string>
    <string name="pref_watchdog_awake_threshold_summary">Threshold for warning (awake / total)</string>
    <string name="pref_ref_for_screen_off_title">Duration threshold [Min.]</string>
    <string name="pref_ref_for_screen_off_summary">Screen Off duration to trigger</string>
    <string name="pref_section_active_mon">Active Monitoring</string>
    <string name="pref_active_mon_enabled_title">Enable</string>
    <string name="pref_active_mon_enabled_summary">Enables active monitoring. Caution: be aware that active monitoring has costs in terms of battery</string>
    <string name="pref_active_mon_freq_title">Frequency [Min.]</string>
    <string name="pref_active_mon_freq_summary">Frequency for saving timer references</string>
    <string name="pref_force_en_title">Force English</string>
    <string name="pref_force_en_summary">Force BBS to be in English (requires restart)</string>
    <string name="pref_section_advanced">Advanced</string>
    <string name="pref_debug_logging_summary">Add debug info to logcat</string>
    <string name="pref_debug_logging_title">Debug</string>
    <string name="pref_developer_title">Enable while charging</string>
    <string name="pref_developer_summary">Enable stats while charging (at your own risk, stats may be inconsistent)</string>
    <string name="pref_auto_refresh_title">Auto refresh</string>
    <string name="pref_auto_refresh_summary">Automatically reload \'current\' when switching screens/settings</string>
    <string name="pref_section_sharing">Sharing options</string>
    <string name="pref_save_dumpfile_title">Dumpfile</string>
    <string name="pref_save_dumpfile_summary">Share dumpfile</string>
    <string name="pref_save_logcat_title">Logcat</string>
    <string name="pref_save_logcat_summary">Share logcat</string>
    <string name="pref_save_dmesg_title">dmesg</string>
    <string name="pref_save_dmesg_summary">Share dmesg</string>
    <string name="pref_screen_permissions_title">App Permissions</string>
    <string name="pref_screen_permissions_summary">Check for the required permissions</string>
    <string name="pref_screen_import_export_title">Import/Export</string>
    <string name="pref_screen_import_export_summary">Import and Export Preferences</string>
    <string name="pref_section_misc">Misc</string>
    <string name="pref_screen_widgets_title">Widgets</string>
    <string name="widget_default_stat_title">Default stat to open</string>
    <string name="widget_default_stat_summary">Set the stat to be called from widget</string>
    <string name="widget_show_text_color_title">Text colored</string>
    <string name="widget_show_text_color_summary">Show colors on text-only widget</string>
    <string name="widget_fallback_stat_type_title">Fallback stat type</string>
    <string name="widget_fallback_stat_type_summary">Set the fallback stat type to be shown in the widget if the primary one has no reference</string>
    <string name="widget_default_stat_type_title">Stat type</string>
    <string name="widget_default_stat_type_summary">Set the stat type to be shown in the widget</string>
    <string name="large_widget_show_pct_title">Show only %</string>
    <string name="large_widget_show_pct_summary">Show durations only in % of total time</string>
    <string name="widget_opacity_title">Opacity</string>
    <string name="widget_opacity_summary">Adjust the widget opacity</string>
    <string name="thumbnail_size_title">Thumbnail Size</string>
    <string name="medium_font_size_title">Medium Font Size</string>
</resources>