<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="ref_for_screen_off"
        android:summary="@string/pref_enable_watchdog_summary"
        android:title="@string/pref_enable_watchdog_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="ref_for_screen_off"
        android:key="watchdog_on_unlock"
        android:summary="@string/pref_watchdog_on_unlock_summary"
        android:title="@string/pref_watchdog_on_unlock_title" />

    <PreferenceCategory
        android:key="warnings"
        android:title="@string/pref_section_warnings" >
        <com.asksven.betterbatterystats.contrib.SeekBarPreference
            android:defaultValue="30"
            android:dependency="ref_for_screen_off"
            android:key="watchdog_awake_threshold"
            android:max="100"
            android:summary="@string/pref_watchdog_awake_threshold_summary"
            android:title="@string/pref_watchdog_awake_threshold_title"
            robobunny:interval="10"
            robobunny:min="0"
            robobunny:unitsLeft=""
            robobunny:unitsRight="%" />
        <com.asksven.betterbatterystats.contrib.SeekBarPreference
            android:defaultValue="10"
            android:dependency="ref_for_screen_off"
            android:key="watchdog_duration_threshold"
            android:max="30"
            android:summary="@string/pref_ref_for_screen_off_summary"
            android:title="@string/pref_ref_for_screen_off_title"
            robobunny:interval="1"
            robobunny:min="0"
            robobunny:unitsLeft=""
            robobunny:unitsRight="Min." />
    </PreferenceCategory>

</PreferenceScreen>