<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com" >
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="active_mon_enabled"
        android:summary="@string/pref_active_mon_enabled_summary"
        android:title="@string/pref_active_mon_enabled_title" />

    <com.asksven.betterbatterystats.contrib.SeekBarPreference
        android:defaultValue="60"
        android:key="active_mon_freq"
        android:max="240"
        android:summary="@string/pref_active_mon_freq_summary"
        android:title="@string/pref_active_mon_freq_title"
        robobunny:interval="30"
        robobunny:min="30"
        robobunny:unitsLeft=""
        robobunny:unitsRight="Min." />

</PreferenceScreen>